pod/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-pod
  namespace: nginx
  labels:
    app: nginx-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
         app: nginx-app
    spec:
      containers:
         - name: nginx-dep-pod
           image: nginx:1.14.2
           ports:
             - containerPort: 80
